# pyxl_validator

./: .gitignore  README.md  pyproject.toml
pyxl_validator/: __init__.py  excel_compare.py  excel_differator.py  excel_table_engine.py  table_comparison_summary.py  table_validator.py  table_validator_registry.py
test/assets/expected/: e-daten1.xlsx  e-daten2_pd.xlsx
test/assets/input/: daten1.ods  daten1.xls  daten1.xlsx
test/pyxl_validator/: test_differator.py  test_pandas_engine.py  test_pd_differator.py  test_type_recognition.py  test_value_validation.py
test/tmp/: test_output_engine_pandas2_fmt.csv  test_output_engine_pandas2_st.json  test_output_engine_pandas_df.csv  v-daten1-ods.xlsx  v-daten1-pandas_df.csv  v-daten1-pandas_fmt.csv  v-daten1-pandas_st.json  v-daten1-xls.xlsx  v-daten1-xlsx.xlsx  v-daten2_pd.xlsx
